--- a/src/style/layout.scss
+++ b/src/style/layout.scss
@@ -1,12 +1,17 @@
 /*--------------
    CONTAINERS
 --------------*/ 
-body{
-    max-width: 100vw;
-    max-height: 100vh;
-}
 
 .container{
-    width: 80rem;
+    width: 100vw;
+    height: 100vh;
+}
+
+.container-md{
+    width: 80%;
     margin: auto;
+}
+
+.row{
+    width: 100%;
 }
